# ha-alexa-smarthome

./: README.md  hacs.json  setup.cfg  test_alexa_api.py
custom_components/alexa_smarthome/: __init__.py  api.py  auth.py  climate.py  config_flow.py  const.py  coordinator.py  device_store.py  entity.py  fan.py  light.py  lock.py  manifest.json  models.py  sensor.py  strings.json  switch.py
custom_components/alexa_smarthome/translations/: en.json
