[metadata]
name = ha-alexa-smarthome
version = 1.0.0
description = Home Assistant custom integration for Alexa Smart Home devices
long_description = file: README.md
author = swastikmishra-atlan
license = MIT
python_requires = >=3.12

[options]
packages = find:
install_requires =
    aiohttp>=3.8.0

[flake8]
max-line-length = 100
extend-ignore = E501

[mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
